<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished Event</string>
    <string name="title_setting">Setting</string>
    <string name="title_favorite">Favorite</string>
    <string name="nama_event">Nama Event</string>
    <string name="register">Daftar</string>
    <string name="picture_thumbnail">Poto</string>
    <string name="event_title">Event Title</string>
    <string name="organizer_name">Organizer Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_time">Waktu: %1$s - %2$s</string>
    <string name="quota">Sisa Kuota: %1$d</string>
    <string name="upcoming_event">Upcoming Events</string>
    <string name="finished_event">Finished Events</string>
    <string name="search_result">Search Result</string>
    <string name="image_content_description">Event Image</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="no_fav">No favorite events found</string>
</resources>